<resources>
    <string name="app_name">Kerux Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_home">Home</string>
    <string name="title_enrollment">Enrollment</string>
    <string name="title_manageAcc">Manage Accounts</string>
    <string name="title_QM">Queue Manager</string>
    <string name="title_doc">Doctor</string>
    <string name="title_dept">Hospital Department</string>
    <string name="title_uname">Username</string>
    <string name="title_fname">First Name</string>
    <string name="title_lname">Last Name</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_confirmPass">Confirm Password</string>
    <string name="title_goBack">Go Back</string>
    <string name="title_register">Register</string>
    <string name="title_deptName">Department</string>
    <string name="title_clinic">Clinic</string>
    <string name="title_statistics">Statistics</string>
    <string name="login">Login</string>
    <string name="enrolledQM">Enrolled Queue Manager</string>
    <string name="enrolledDoctor">Enrolled Doctor</string>
    <string name="enrolledDept">Enrolled Hospital Department</string>
    <string name="logout">Logout</string>
    <string name="blocking">Block Existing Page</string>
    <string name="audit">Audit Reports</string>
    <string name="statistic">Statistic Reports</string>
    <string name="rating">Rating Reports</string>
    <string name="generateAudit">Generate Audit Reports</string>
    <string name="viewAudit">View Audit Reports</string>
    <string name="generateStatistic">Generate Statistic Reports</string>
    <string name="viewStatistic">View Statistic Reports</string>
    <string name="generateRating">Generate Rating Reports</string>
    <string name="attempt">Attempts Remaining: </string>
    <string name="prc">PRC License No: </string>
    <string name="roomNo">Room No: </string>
    <string name="schedule">Schedule: </string>
    <string name="clinicChoices">Choose Clinic: </string>
    <string name="enrolLQm">Enroll Queue Manager</string>
    <string name="uneroll">Unenroll</string>
    <string name="displayDept">Display</string>
    <string name="listAccount">View Enrolled Accounts</string>
    <string name="blockPriv">Block Privileges</string>
    <string name="viewBlockedUser">View Blocked Users</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="revoke">Revoke Privileges</string>
    <string name="unenrollDept">Unenroll Department</string>
    <string name="unenrollQM">Unenroll Queue Manager</string>
    <string name="unenrollDoctor">Unenroll Doctor</string>
    <string name="reason">Reason for Revoking Privilege</string>
    <string name="show">Show</string>
    <string name="choose">Choose to Show</string>
    <string name="subjectEmail">
        Kerux Queue Manager Enrollment Credentials
    </string>
    <string name="bodyEmail">Good day!
        We have successfully enrolled you as a Queue Manager.
        Here are your credentials

    </string>
    <string name="username">
        Username:
    </string>
    <string name="password">
        Password:
    </string>
    <string name="footerEmail">

        Please login using the credentials above and please change your password immediately.
        Thank you!
    </string>

    <string name="unenrollSubject">Privilege Revoked - Kerux</string>
    <string name="unenrollEmail">Good day!

        We regret to inform you that your privileges on the Kerux application have been revoked.
        Please contact the administrator of the clinic, if you wish to know more about why your privilege has been revoked.

        Thank you!
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
</resources>