<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kerux.admin_thesis_kerux.enrollment.EnrollDoctor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="700dp">

            <ImageButton
                android:id="@+id/docPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.098"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.112"
                app:srcCompat="@drawable/ic_acc" />

            <TextView
                android:id="@+id/txtFname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.208" />

            <EditText
                android:id="@+id/txtboxDocFName"
                android:layout_width="230dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.929"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.183" />

            <TextView
                android:id="@+id/txtLname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.284" />

            <EditText
                android:id="@+id/txtboxDocLName"
                android:layout_width="230dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.929"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.263" />

            <TextView
                android:id="@+id/txtSched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Schedule"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.104"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.371" />

            <EditText
                android:id="@+id/txtboxSched1"
                android:layout_width="95dp"
                android:layout_height="46dp"
                android:inputType="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.43"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.351" />

            <TextView
                android:id="@+id/txtTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TO"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.64"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.37" />

            <EditText
                android:id="@+id/txtboxSched2"
                android:layout_width="95dp"
                android:layout_height="46dp"
                android:inputType="time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.351" />

            <TextView
                android:id="@+id/txtRoomNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Room No."
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.092"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

            <EditText
                android:id="@+id/txtboxRoomNo"
                android:layout_width="230dp"
                android:layout_height="47dp"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.433" />

            <TextView
                android:id="@+id/txtDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Days"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571" />

            <CheckBox
                android:id="@+id/cBoxMon"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/monday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.513" />

            <CheckBox
                android:id="@+id/cBoxThurs"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/thursday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.446"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.594" />

            <CheckBox
                android:id="@+id/cBoxFriday"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/friday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.621" />

            <CheckBox
                android:id="@+id/cBoxSat"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/saturday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.648" />

            <CheckBox
                android:id="@+id/cBoxTues"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/tuesday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.436"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.54" />

            <CheckBox
                android:id="@+id/cBoxWed"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/wednesday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567" />

            <TextView
                android:id="@+id/txtDocType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Doctor Type"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.734" />

            <Spinner
                android:id="@+id/spinnerDocType"
                android:layout_width="230dp"
                android:layout_height="49dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.725" />

            <Button
                android:id="@+id/bttnAddDocType"
                android:layout_width="158dp"
                android:layout_height="35dp"
                android:text="ADD DOCTOR TYPE"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.707"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.788" />

            <TextView
                android:id="@+id/txtDept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Department"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.033"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.874" />

            <Spinner
                android:id="@+id/spinnerDepType"
                android:layout_width="230dp"
                android:layout_height="49dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.87" />

            <Button
                android:id="@+id/bttnEnrollDoc"
                android:layout_width="260dp"
                android:layout_height="52dp"
                android:text="Enroll Doctor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.975" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-17dp">

        <include layout="@layout/main_toolbar" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/main_nav_drawer" />
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>